--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,8 @@ flutter:
   assets:
     - assets/images/flutter_logo.png
     - assets/images/cloud.png
+    - assets/images/vip.png
+    - assets/images/transparent-person.png
  
 
   # An image asset can refer to one or more resolution-specific "variants", see
