--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,8 @@ flutter:
     - assets/images/cloud.png
     - assets/images/vip.png
     - assets/images/transparent-person.png
+    - assets/images/pocket.png
+
  
 
   # An image asset can refer to one or more resolution-specific "variants", see
