ecran withdrawal, ecran des taches et debut ecran vip-area

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,8 @@ flutter:
     - assets/images/vip.png
     - assets/images/transparent-person.png
     - assets/images/pocket.png
+    - assets/images/nothing.png
+    - assets/images/star.png
 
  
 
